<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_user_detail_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.UserDetail">
    <ProgressBar
        android:id="@+id/progress_bar"
        android:visibility="visible"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:elevation="0dp"
            app:elevation="0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/appBarTitle"
                android:layout_width="match_parent"
                android:elevation="0dp"
                app:elevation="0dp"
                android:layout_height="wrap_content"
                app:contentScrim="@color/purple_500"
                app:expandedTitleGravity="center_horizontal|bottom"

                app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
                app:title="Arby Azra">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="260dp"
                    android:contentDescription="@string/representing_an_bg_image_of_appbar"
                    android:scaleType="centerCrop"
                    android:src="@drawable/bg"
                    app:layout_collapseMode="parallax" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/detail_img"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="20dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <LinearLayout
                        android:id="@+id/linearLayout3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="18dp"
                        android:gravity="center"
                        android:orientation="horizontal"
                        app:layout_constraintTop_toBottomOf="@+id/detail_img">

                        <TextView
                            android:id="@+id/followings"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginEnd="10dp"
                            android:gravity="center"
                            android:text="@string/detail_following" />

                        <TextView
                            android:id="@+id/followers"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="10dp"
                            android:gravity="center"
                            android:layout_marginEnd="10dp"
                            android:text="@string/detail_followers" />

                        <TextView
                            android:id="@+id/repository"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="10dp"
                            android:gravity="center"
                            android:text="@string/detail_followers" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:orientation="horizontal"
                        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="center_vertical"
                            android:contentDescription="@string/representing_icon_of_place"
                            android:src="@drawable/ic_baseline_place_24"
                            app:tint="@color/orange" />

                        <TextView
                            android:id="@+id/location"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="5dp"
                            android:gravity="center"
                            android:text="@string/detail_place"
                            android:textColor="@color/orange"
                            android:textSize="12sp" />


                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearLayout2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:orientation="horizontal"
                        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="center_vertical"
                            android:contentDescription="@string/representing_icon_of_working"
                            android:src="@drawable/ic_baseline_work_24"
                            app:tint="@color/orange" />

                        <TextView
                            android:id="@+id/working_at"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="5dp"
                            android:gravity="center"
                            android:text="@string/detail_working"
                            android:textColor="@color/orange"
                            android:textSize="12sp" />

                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.appcompat.widget.Toolbar
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">


            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout"

                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/followers" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/followings" />
            </com.google.android.material.tabs.TabLayout>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/view_pager"

                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</FrameLayout>